[gd_scene load_steps=8 format=3 uid="uid://cplffus7y6o1y"]

[ext_resource type="PackedScene" uid="uid://dvos6c0i03dt3" path="res://Scenes/Prefabs/healthPack.tscn" id="1_svl4m"]
[ext_resource type="Script" path="res://Scripts/LevelMaster.gd" id="2_q66g1"]
[ext_resource type="PackedScene" uid="uid://cmevk0e00c287" path="res://Scenes/Prefabs/Player.tscn" id="2_ukumk"]
[ext_resource type="PackedScene" uid="uid://bdg7w4hmufq4d" path="res://Scenes/LvlUpMenu.tscn" id="3_7s6mg"]
[ext_resource type="PackedScene" uid="uid://cor3gtdgmnjjd" path="res://tmap.tscn" id="4_7j2lv"]
[ext_resource type="PackedScene" uid="uid://clopi7g08pbrf" path="res://Scenes/Prefabs/EnemySpawner.tscn" id="4_ivy41"]
[ext_resource type="Script" path="res://Scenes/lvlTmr.gd" id="5_1gdh0"]

[node name="Level1" type="Node2D"]
process_mode = 1

[node name="HealthPack" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-439, -201)

[node name="HealthPack18" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-5264, -3252)

[node name="HealthPack19" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-1270, -2051)

[node name="HealthPack2" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2841, -1743)

[node name="HealthPack3" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-1917.61, -1878.54)

[node name="HealthPack4" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4920.08, -358.288)

[node name="HealthPack5" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2557, -177)

[node name="HealthPack6" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4369, -1672)

[node name="HealthPack7" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4407, -1362)

[node name="HealthPack8" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4377, -1551)

[node name="HealthPack9" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2210, -3099)

[node name="HealthPack10" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2323, -3061)

[node name="HealthPack11" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2081, -3038)

[node name="HealthPack12" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4404, -2782)

[node name="HealthPack13" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-3667, -2248)

[node name="HealthPack14" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-2973, -2456)

[node name="HealthPack15" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-3662, -1030)

[node name="HealthPack16" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-4388, -2461)

[node name="HealthPack17" parent="." instance=ExtResource("1_svl4m")]
position = Vector2(-853, -3059)

[node name="LevelMaster" type="Node" parent="." groups=["LevelMaster"]]
script = ExtResource("2_q66g1")

[node name="waveTimer" type="Timer" parent="LevelMaster"]
autostart = true

[node name="levelTimer" type="Timer" parent="LevelMaster"]
wait_time = 600.0
autostart = true

[node name="LevelUpMenuLayer" type="CanvasLayer" parent="LevelMaster"]
process_mode = 3

[node name="LvlUpMenu" parent="LevelMaster/LevelUpMenuLayer" instance=ExtResource("3_7s6mg")]

[node name="Player" parent="." instance=ExtResource("2_ukumk")]
position = Vector2(-2388, -1798)
engine_power = 500
friction = -10

[node name="Camera2D" type="Camera2D" parent="Player"]
visible = false
zoom = Vector2(2, 2)

[node name="spawners" type="Node2D" parent="Player"]
visible = false

[node name="EnemySpawner" parent="Player/spawners" instance=ExtResource("4_ivy41")]
position = Vector2(-396, -240)

[node name="EnemySpawner2" parent="Player/spawners" instance=ExtResource("4_ivy41")]
position = Vector2(390, -248)

[node name="EnemySpawner3" parent="Player/spawners" instance=ExtResource("4_ivy41")]
position = Vector2(-402, 264)

[node name="EnemySpawner4" parent="Player/spawners" instance=ExtResource("4_ivy41")]
position = Vector2(424, 278)

[node name="TileMap2" parent="." instance=ExtResource("4_7j2lv")]
z_index = -5

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
rotation = -0.0111277
text = "30:00"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("5_1gdh0")

[connection signal="timeout" from="LevelMaster/waveTimer" to="LevelMaster" method="_on_wave_timer_timeout"]
